@@ -64,6 +64,7 @@ export(parInit)
 export(parLower)
 export(parUpper)
 export(parbounds)
+export(parentChild2TaxonTree)
 export(parnames)
 export(perCapitaRates)
 export(perfectParsCharTree)
